bitfields/tests/compile_error_cases/errors/bitflag_size_type.rs
use bitfields::bitflag;

#[bitflag(usize)]
enum Flags {
    #[base]
    Unknown = 0,
    A = 1,
}

fn main() {}

