bitfields/tests/compile_error_cases/errors/bitflag_size_type.stderr
error: The bitflag attribute must have an unsigned integer type as its first argument.
 --> tests/compile_error_cases/errors/bitflag_size_type.rs:3:1
  |
3 | #[bitflag(usize)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitflag` (in Nightly builds, run with -Z macro-backtrace for more info)
